[package]
name = "minitrace-fbs"
version = "0.1.0"
authors = ["zhongzc <zhongzc_arch@outlook.com>"]
edition = "2018"

[dependencies]
flatbuffers = "0.6.1"
minitrace = { git = "https://github.com/pingcap-incubator/minitrace-rust.git" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "serialization"
harness = false
